fixing weird whitespace

--- a/mullerHome/mullerHome/static/mullerHome/css/base.css
+++ b/mullerHome/mullerHome/static/mullerHome/css/base.css
@@ -39,6 +39,9 @@ html, body {
     min-height: 100%;
 }
 
+div.byline address{
+    display: inline;
+}
 /* Set black background color, white text and some padding */
 footer {
     height: 50px;
@@ -50,9 +53,10 @@ footer {
     /*padding: 15px;*/
 }
 
-#footer {
+/*#footer {
     width:100%;
-}
+}*/
+
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
     .sidenav {
